--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "test": "npx hardhat test",
+    "compile": "npx hardhat compile",
+    "clean": "npx hardhat clean"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.15"
@@ -14,14 +19,21 @@
     "@nomicfoundation/ignition-core": "^0.15.7",
     "@openzeppelin/contracts": "3.2.0",
     "@pancakeswap/pancake-swap-lib": "^0.0.4",
+    "@pancakeswap/v3-core": "^1.0.2",
+    "@pancakeswap/v3-periphery": "^1.0.2",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.2.0",
+    "@types/ethereum-block-by-date": "^1.4.1",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=18.0.0",
+    "@uniswap/v2-core": "^1.0.1",
     "chai": "4.3.7",
+    "csv-parser": "^3.0.0",
+    "datastructures-js": "^13.0.0",
     "dotenv": "^16.4.5",
     "eslint": "^9.13.0",
+    "ethereum-block-by-date": "^1.5.0",
     "ethers": "^6.13.4",
     "hardhat-abi-exporter": "^2.10.1",
     "hardhat-gas-reporter": "^2.2.1",
@@ -31,5 +43,6 @@
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.0",
     "typescript": ">=4.5.0"
-  }
+  },
+  "packageManager": "yarn@4.5.3"
 }
