--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@nomicfoundation/ignition-core": "^0.15.7",
-    "@openzeppelin/contracts": "3.2.0",
+    "@openzeppelin/contracts": "3.4.2-solc-0.7",
     "@pancakeswap/pancake-swap-lib": "^0.0.4",
     "@pancakeswap/v3-core": "^1.0.2",
     "@pancakeswap/v3-periphery": "^1.0.2",
